Fixed text alignment on BetHistory page

--- a/frontend/src/components/GameResults/GameResults.css
+++ b/frontend/src/components/GameResults/GameResults.css
@@ -12,3 +12,7 @@
     align-content: center;
     border: none;
 }
+
+.hdr{
+    text-align: center;
+}
